Finished Hourly weather table

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div id ="current-weather-bottom" class="d-flex justify-content-evenly">
             <div>
                 <img id="current-weather-image"></img>
-                <h6 id="current-weather-text"></h5>
+                <h6 id="current-weather-text" class="text-center"></h5>
             </div>
             <div class="d-flex justify-content-center align-items-center">
                 <div>
@@ -50,12 +50,12 @@
         <div>   
             <h6>Hourly</h6>
         </div>
-        <table id="hourly-table" class="table">
-            <tr class="hourly-weather-table-row" id="hourly-table-hour"> <th id="hourly-weather-day"></th>   </tr>
+        <table id="hourly-table" class="table mb-4">
+            <tr class="hourly-weather-table-row" id="hourly-table-hour">     <th id="hourly-weather-day"></th>   </tr>
             <tr class="hourly-weather-table-row" id="hourly-table-forecast"> <th>Forecast</th>   </tr>
-            <tr class="hourly-weather-table-row" id="hourly-table-temp"> <th>Temp(°C)</th>   </tr>
-            <tr class="hourly-weather-table-row" id="hourly-table-feel"> <th>Feels like</th>   </tr>
-            <tr class="hourly-weather-table-row" id="hourly-table-wind"> <th>Wind(km/h)</th>   </tr>
+            <tr class="hourly-weather-table-row" id="hourly-table-temp">     <th>Temp(°C)</th>   </tr>
+            <tr class="hourly-weather-table-row" id="hourly-table-feel">     <th>Feels like</th>   </tr>
+            <tr class="hourly-weather-table-row" id="hourly-table-wind">     <th>Wind(km/h)</th>   </tr>
             
         </table>
 
