Syntactic changes, added some commentaries

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 </div>   
 <div class="bg-light">
-
+    <div class = "today">
     <div id = "current-weather" class="container w-95 shadow-sm p-1 mb-5 bg-body rounded">
         <div class="d-flex justify-content-between align-items-start w-100 h-10">
             <h4 class='p-0'>Current Weather</h4>
@@ -59,11 +59,19 @@
             
         </table>
 
+        </div>
+    </div>
+
+
+    <div class = "five-day-forecast">
+
+
     </div>
 </div>
 
+
     <script src="./node_modules/jquery/dist/jquery.js"></script>
 
-    <script src="./script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
